css/styles.css
body {
  text-align: center;
  font-family: "Roboto", monospace;
}

h1 {
  margin: 0 auto;
  font-family: "Montez", fantasy;
  font-size: 60px;
  margin: 2%;
  margin-bottom: 0px;
}

h2, h3, h4 {
  font-size: 36px;
  font-weight: lighter;
  margin: 2%;
}

header {
  font-size: 30px;
  margin-top: 2%;
}

.home, .ttt, .connect {
  padding-right: 30px;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.column {
  height: 100%;
  width: 100%;
  flex-direction: column;
}

.wrap {
  flex-wrap: wrap;
  height: 456px;
  width: 456px;
}

.connect-wrap {
  flex-wrap: wrap;
  height: 700px;
  width: 700px;
}

.checker-wrap {
  flex-wrap: wrap;
  height: 640px;
  width: 700px;
}

.square {
  border: 1px solid rgba(0, 0, 0, 0.75);
  font-size: 96px;
  height: 150px;
  line-height: 150px;
  user-select: none;
  width: 150px;
}

.square:hover {
  background-color: lightgray;
  cursor: pointer;
}

.circle {
  width: 100px;
  height: 100px;
  background-color: white;
  border-radius: 50%;
  border: 1px solid rgba(0, 0, 0, 0.75);
  display: inline-block;
  user-select: none;
}

.check-square {
  width: 80px;
  height: 80px;
  border: 1px solid rgba(0, 0, 0, 0.75);
  user-select: none;
}

#reset-button {
  background-color: white;
  border: 1px solid black;
  color: black;
  font-size: 21px;
  line-height: 55px;
  margin: 1%;
  text-align: center;
  width: 456px;
}

#reset-button:hover {
  background-color: black;
  color: white;
  cursor: pointer;
}

#xscore {
  float: left;
  display: inline;
  text-align: center;
  padding-left: 35%;
  margin: 2%;
}

#oscore {
  float: right;
  display: inline;
  padding-right: 35%;
  margin: 2%;
}

#o-button {
  background-color: white;
  border: 1px solid black;
  color: black;
  font-size: 21px;
  line-height: 40px;
  margin: 1%;
  text-align: center;
  width: 150px;
}

#o-button:hover {
  background-color: gray;
  color: white;
  font-style: italic;
  cursor: pointer;
}

